<resources>
    <string name="app_name">KiK</string>
    <string name="one_player">One Player</string>
    <string name="two_players">Two Players</string>
    <string name="exit">Exit</string>
    <string name="background_description">Background of the gameboard</string>
    <string name="game_table">Table of the game</string>
    <string name="xes">Games Xes</string>
    <string name="oes">Games Oes</string>
    <string name="pole">Pole</string>
    <string name="player_one_cross">Player One\n(Cross)</string>
    <string name="player_two_circle">Player Two\n(Circle)</string>
    <string name="player_one_won">Player One Won!</string>
    <string name="player_two_won">Player Two Won!</string>
    <string name="draw">Draw! (Press reload to start again)</string>
    <string name="level_hard">Hard</string>
    <string name="choose_level">Choose difficulty:</string>
    <string name="computer">Computer</string>
    <string name="computer_won">Computer Won!</string>
    <string name="level_easy">Easy</string>
    <string name="reload">Reload</string>
    <string name="choose_sign">Choose:</string>
    <string name="player_one_circle">Player One\n(Circle)</string>
    <string name="player_two_cross">Player Two\n(Cross)</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="settings_button">Settings</string>

    <!--
    Strings for difficulty level preference
    -->
    <string name="pref_difficulty_key" translatable="false">pref_difficulty</string>
    <string name="pref_fifficulty_summary">Difficulty</string>
    <string name="pref_summary_off">Easy</string>
    <string name="pref_summary_on">Hard</string>
    <bool name="pref_difficulty_value_default">true</bool>
    <string name="all_pref_title">Game Settings</string>

    <!--
    Strings for choosing menu theme
    -->
    <string name="pref_skin_label">Game Skin</string>
    <string name="pref_skin_label_classic">Classic</string>
    <string name="pref_skin_label_neon">Neon Dark</string>

    <string name="pref_skin_key" translatable="false">skin</string>
    <string name="pref_skin_classic_value" translatable="false">1</string>
    <string name="pref_skin_neon_value" translatable="false">2</string>

    <!--
    Stings for choosing apps color
    -->
    <string name="pref_color_label">Game Color</string>
    <string name="pref_color_label_red">Red</string>
    <string name="pref_color_label_blue">Blue</string>
    <string name="pref_color_label_green">Green</string>

    <string name="pref_color_key" translatable="false">color</string>
    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>

</resources>